# predicting-user-churn

./: README.md  linear_model.py  pyproject.toml  test.csv
data/: sample_submission.csv  submission.csv  train.csv
